officer logic